# tobii-pytracker

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  install_requirements.sh  main.py  pyproject.toml  requirements-no-deps.txt  requirements.txt  setup.cfg  tobii-gaze.py  tobii-sample-gaze-data.csv
configs/: config.yaml  custom_config.py  eyetracker_config.yaml  mouse_eyetracker_config.yaml
configs/config/: config.yaml  eyetracker_config.yaml
custom_runtime_models/: custom_yolo_model.py
datasets/: custom_dataset.py
docs/: Makefile  api.rst  basic_examples.rst  calibration.rst  commandline_usage.rst  conf.py  configuration.rst  contributing.rst  data_analyzers.rst  data_loading_visualization.rst  extending.rst  index.rst  mouse_emulation.rst  release_notes.rst  troubleshooting.rst
examples/: analyzers_demo.ipynb  loading_data.ipynb
models/: custom_model.py  custom_yolo_model.py
src/tobii_pytracker/: __init__.py  main.py
src/tobii_pytracker/analyze/: __init__.py  analyzer.py  analyzers.py  base_analyzer.py  classic_analyzers.py  cluster_analyzer.py  concept_analyzer.py  data_loader.py  data_structures.py  models.py  transcript_analyzer.py
src/tobii_pytracker/configs/: custom_config.py
src/tobii_pytracker/datasets/: __init__.py  custom_dataset.py
src/tobii_pytracker/models/: __init__.py  custom_model.py  custom_yolo_model.py
src/tobii_pytracker/runtime_models/: custom_model.py
src/tobii_pytracker/utils/: custom_logger.py  eyetracker.py  gui.py  voice.py
src/tobii_pytracker/utils/legacy/: plot_gaze_data.py  plot_gaze_data_custom_model_pred.py  run.sh
utils/: custom_logger.py  eyetracker.py  gui.py
utils/legacy/: plot_gaze_data.py  plot_gaze_data_custom_model_pred.py
