[metadata]
name = tobii-pytracker
version = 0.1.1
author = Szymon Bobek
author_email = szymon.bobek@gmail.com
description = Python-based framework for Tobii eye tracker experiments and multimodal data collection.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/sbobek/tobii-pytracker
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Human Machine Interfaces


[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10, <3.11
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tobii-pytracker = tobii_pytracker.main:cli
